syntax = "proto3";
package hub;

service Hub {
rpc GetGateway (GatewayRequest) returns (GatewayResponse);
}

message GatewayRequest {}

message GatewayResponse{
    string redirect_url = 1;
}

